# webappfinalproject

./: index.html
jeffery/: index.html
mediteasy/: .gitignore  pyproject.toml  seed_data.py  後端他們的README.md  目前前後端更新進度README.md
mediteasy/app/: database.py  main.py  models.py  utils.py
mediteasy/app/analysis/: skin_tone.py
mediteasy/app/routers/: ai.py  analysis.py  appointment.py  user.py
medplatform/: .gitignore  index.html  目前前後端更新進度README.md
