[project]
name = "med-it-easy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.2",
    "google-generativeai>=0.8.5",
    "matplotlib>=3.10.7",
    "mediapipe>=0.10.14",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "scikit-image>=0.25.2",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
]
